k8s/slackin/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: slackin-server
spec:
  selector:
    matchLabels:
      name: slackin-server
  template:
    metadata:
      labels:
        name: slackin-server
    spec:
      containers:
      - name: slackin-server
        image: gcr.io/pl-dev-infra/slackin/slackin-server:202003242046
        ports:
        - containerPort: 58000
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: 58000
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: 58000
