k8s/slackin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slackin-ingress
  namespace: slackin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: slackin.px.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slackin
            port:
              number: 58000
  ingressClassName: nginx
  tls:
  - hosts:
    - slackin.px.dev
    secretName: slackin-tls
